# parallel-distributed-bigdata-processing

./: .gitignore  DOCKER-SETUP.md  README.md  docker-compose-lab5.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
config/: config.py
src/: main.py
src/lab1/: fibonacci.py  main.py
src/lab2/: EDA.py  analytics.py  data_loader.py  main.py
src/lab2/config/: config.py
src/lab3/: __init__.py  main.py  tf.py
src/lab4/: README.md  __init__.py  analytics.py  data_loader.py  main.py  processor.py
src/lab4/config/: __init__.py  config.py
src/lab5/: README.md  __init__.py  data_loader.py  docker-entrypoint.sh  iceberg_ops.py  main.py
src/lab5/config/: __init__.py  config.py
tests/: test_fibonacci.py
tests/lab1/: test_fibonacci.py
tests/lab2/: test_analytics.py  test_data_loader.py
tests/lab3/: test_tf.py
tests/lab4/: __init__.py  test_analytics.py  test_processor.py
